--- a/template/cargo-generate.toml
+++ b/template/cargo-generate.toml
@@ -2,5 +2,6 @@
 exclude = [ 
   "justfile",
   "d-template/src/bin/part1.rs",
-  "d-template/src/bin/part2.rs"
+  "d-template/src/bin/part2.rs",
+  "d-template/Cargo.toml"
 ]
