--- a/template/d-template/Cargo.toml
+++ b/template/d-template/Cargo.toml
@@ -8,6 +8,7 @@ nom = { workspace = true }
 nom-supreme = { workspace = true }
 num = { workspace = true }
 itertools = { workspace = true }
+regex = { workspace = true }
 
 [dev-dependencies]
 rstest.workspace = true
