--- a/aoc-2024/Cargo.toml
+++ b/aoc-2024/Cargo.toml
@@ -1,5 +1,9 @@
 [workspace]
-members = ["day-01"]
+members = [
+    "day-01",
+    "day-02",
+    "day-03",
+]
 default-members = ["day-*"]
 resolver = "3"
 
@@ -12,5 +16,5 @@ nom = "*"
 nom-supreme = "*"
 num = "*"
 rayon = "*"
-rstest = "*"
 regex = "*"
+rstest = "*"
